--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ version: 1.2.5
 api-version: 1.20
 authors: [Huntifi, Greenfoot5, kasteelvuur]
 depend:
-  - Votifier
+  - VotifierPlus
   - WorldGuard
   - NametagEdit
   - MythicMobs
