--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -278,9 +278,6 @@ commands:
   Alchemist:
     description: Selects the alchemist kit
     usage: /alchemist
-  Armourer:
-    description: Selects the armourer kit
-    usage: /armourer
   Barbarian:
     description: Selects the barbarian kit
     usage: /barbarian
@@ -340,12 +337,6 @@ commands:
   Archer:
     description: Selects the archer kit
     usage: /archer
-  Shieldman:
-    description: Selects the shieldman kit
-    usage: /shieldman
-  Spearman:
-    description: Selects the spearman kit
-    usage: /spearman
   Swordsman:
     description: Selects the swordsman kit
     usage: /swordsman
@@ -357,95 +348,98 @@ commands:
   Hypaspist:
     description: Selects the hypaspist kit
     usage: /hypaspist
-  Spearknight:
+  Shieldman:
+    description: Selects the shieldman kit
+    usage: /shieldman
+  SpearKnight:
     description: Selects the spearknight kit
     usage: /spearknight
+  Spearman:
+    description: Selects the spearman kit
+    usage: /spearman
 
   # Sign Kits
   Abyssal:
     description: Selects the Abyssal kit
-    usage: /abyssal
+    usage: /Abyssal
   Arbalester:
     description: Selects the Arbalester kit
-    usage: /arbalester
+    usage: /Arbalester
   Artillerist:
-    description: Selects the Arillerist kit
-    usage: /artillerist
+    description: Selects the Artillerist kit
+    usage: /Artillerist
   Axeman:
     description: Selects the Axeman kit
     usage: /Axeman
   AxeThrower:
     description: Selects the Axe Thrower kit
-    usage: /axethrower
+    usage: /AxeThrower
   Bonecrusher:
     description: Selects the Bonecrusher kit
     usage: /Bonecrusher
   Buccaneer:
     description: Selects the buccaneer kit
-    usage: /buccaneer
+    usage: /Buccaneer
   CamelRider:
     description: Selects the camel rider kit
-    usage: /camelrider
+    usage: /CamelRider
   CaveTroll:
     description: Selects the Cave Troll kit
-    usage: /cavetroll
+    usage: /CaveTroll
   Constructor:
     description: Selects the constructor kit
-    usage: /constructor
-  DwarvenX-bow:
-    description: Selects the Dwarven Xbow kit on Moria
-    usage: /DwarvenX-bow
+    usage: /Constructor
 #  DwarvenX-bow:
 #    description: Selects the Dwarven Xbow kit on Moria
 #    usage: /DwarvenX-bow
   Elytrier:
     description: Selects the Elytrier kit
-    usage: /thunderstoneelytrier
+    usage: /Elytrier
   Fallen:
     description: Selects the Fallen kit
-    usage: /fallen
-  Gunner:
-    description: Selects the gunner kit
-    usage: /gunner
+    usage: /Fallen
   Guardian:
     description: Selects the Guardian kit
-    usage: /guardian
+    usage: /Guardian
+  Gunner:
+    description: Selects the gunner kit
+    usage: /Gunner
   Hammerguard:
     description: Selects the Hammerguard kit for Moria
     usage: /Hammerguard
   Hellsteed:
     description: Selects the Hellsteed kit
-    usage: /hellsteed
+    usage: /Hellsteed
   Lancer:
     description: Selects the Lancer kit
-    usage: /lancer
+    usage: /Lancer
   Longbowman:
     description: Selects the Longbowman kit
     usage: /Longbowman
   MoriaOrc:
     description: Selects the Moria Orc kit
-    usage: /moriaorc
+    usage: /MoriaOrc
+  Overseer:
+    description: Selects the Moria Overseer kit
+    usage: /Overseer
   OrcPikeman:
     description: Selects the Orc Pikeman kit
     usage: /OrcPikeman
-  MoriaOverseer:
-    description: Selects the Moria Overseer kit
-    usage: /MoriaOverseer
+  Pirate:
+    description: Selects the pirate kit
+    usage: /Pirate
   Skullcrusher:
     description: Selects the Skullcrusher kit for Moria
     usage: /Skullcrusher
   RangedCavalry:
     description: Selects the Ranged Cavalry kit
-    usage: /rangedcavalry
+    usage: /RangedCavalry
   RoyalKnight:
     description: Selects the Royal Knight kit
-    usage: /royalknight
+    usage: /RoyalKnight
   UrukBerserker:
     description: Selects the Uruk Berserker kit
-    usage: /urukberserker
-  Pirate:
-    description: Selects the pirate kit
-    usage: /pirate
+    usage: /UrukBerserker
 
   # Staff Kits
   Warbear:
@@ -453,15 +447,15 @@ commands:
     usage: /warbear
 
   # Event Kits
-  Vampire:
-    description: Selects the vampire kit
-    usage: /vampire
-  HallowedHorseman:
-    description: Selects the Hallowed Horseman kit for Halloween
-    usage: /HallowedHorseman
-  Werewolf:
-    description: Selects the werewolf kit
-    usage: /werewolf
+#  Vampire:
+#    description: Selects the vampire kit
+#    usage: /vampire
+#  HallowedHorseman:
+#    description: Selects the Hallowed Horseman kit for Halloween
+#    usage: /HallowedHorseman
+#  Werewolf:
+#    description: Selects the werewolf kit
+#    usage: /werewolf
 
   # Voter Kits
   FireArcher:
@@ -478,6 +472,9 @@ commands:
     usage: /skirmisher
 
   # Dev Kits
+  Armourer:
+    description: Selects the armourer kit
+    usage: /armourer
   Bannerman:
     description: Selects the bannerman kit
     usage: /bannerman
