Added Windlancer again

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -436,6 +436,9 @@ commands:
   UrukBerserker:
     description: Selects the Uruk Berserker kit
     usage: /UrukBerserker
+  Windlancer:
+    description: Selects the Windlancer kit
+    usage: /Windlancer
 
   # Staff Kits
   Warbear:
